Timeline height now takes up all of remaining height and will have its own scroll for posts. Page no longer has annoying scrollbar that takes space.

--- a/client/src/components/navSidebar/navSidebar.css
+++ b/client/src/components/navSidebar/navSidebar.css
@@ -3,8 +3,6 @@
 }
 
 .nav-sidebar nav {
-  position: sticky;
-  top: 60px;
   background-color: #F0F2F5;
   border-radius: 8px;
   padding-top: 15px;
