--- a/client/src/pages/timeline/timeline.css
+++ b/client/src/pages/timeline/timeline.css
@@ -8,4 +8,10 @@
   background-color: #F0F2F5;
   margin-top: 60px;
   border-radius: 8px;
+  overflow: scroll;
+  height: calc(100vh - 60px);
+}
+
+.timeline-main::-webkit-scrollbar {
+  width: 0px;
 }
